# Confidence

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
dependencies/: FindGraphviz.cmake
docs/: Doxyfile
include/core/: CAssignable.h  CConfiguration.h  CConfigurationGroup.h  CEnvironmentImport.h  CEnvironmentVariable.h  CEvaluationContext.h  CExecutionContext.h  CExecutionContextBase.h  CFileTextProvider.h  CGeneratedTextFile.h  CGroup.h  CInstance.h  CInstanceGroup.h  CNoChildren.h  CParentalMap.h  CProcessArgument.h  CProcessFireForget.h  CProcessWaitCompletion.h  CProject.h  CRunProcess.h  CStoredDescriptionItem.h  CStoredExpression.h  CStoredItemCollection.h  CStoredNameItem.h  CStoredTextProvider.h  CVariable.h  CVariableExpressionKey.h  EBuiltInVariables.h  ETreeItemType.h  IContextStorage.h  IDependsOnVariables.h  IDescribedItem.h  IExecutable.h  IExpression.h  IFindByName.h  INamedItem.h  INotifyItemOperation.h  IProcessPolicy.h  IProjTreeItem.h  ISerializationNotify.h  (+2 more)
include/core/items/: CConfiguration.h  CConfigurationGroup.h  CConstant.h  CEnvironmentImport.h  CGroup.h  CInstance.h  CInstanceGroup.h  CProject.h
include/core/items/condition/: CConditional.h  CLogicalComparator.h  CLogicalOperator.h  ICondition.h
include/core/items/file_generator/: CFileTextProvider.h  CGeneratedTextFile.h  CStoredTextProvider.h  ITextProvider.h
include/core/items/file_operation/: CFileOperation.h  CFileOperations.h  CIniFileHandler.h  CRegexHandler.h  CXmlFileHandler.h  EFileOperationHandlerType.h  IFileDataLocator.h  IFileOperationContext.h  IFileOperationHandler.h
include/core/items/group/: CGroup.h  CGroupFilterBase.h  CGroupFilterConfiguration.h  CGroupFilterConfigurationAndInstance.h  CGroupFilterInstance.h  IGroupFilter.h
include/core/items/process/: CProcessArgument.h  CProcessFireForget.h  CProcessWaitCompletion.h  CRunProcess.h  EProcessPolicy.h  IProcessPolicy.h  SProcessStartInfo.h
include/core/items/variable/: CEnvironmentVariable.h  CVariable.h  CVariableExpressionKey.h  EBuiltInVariables.h
include/docs/: CCommonMarkExporter.h  CDiagram.h  CHtmlExporter.h  CMarkCustomBlock.h  CMarkNodeWrapper.h  CMarkdownExporter.h  CStoredOutputFileName.h  EDocExporter.h  IDocExporter.h  IDocumentable.h  IDocumentationContext.h  IOutputFileName.h
include/ui/: CAcceleratorEntry.h  CGeneratedTextFileEditor.h  CGroupEditor.h  CMainApp.h  CMainWindow.h  CNameDescEditor.h  CProcessEditor.h  CProjectEditor.h  CTextStyler.h  CTreeBrowserModel.h  CTreeItemEditorManager.h  CVariableEditor.h  SDocExporterTypeInfo.h  STreeItemTypeInfo.h  resources.h
include/ui/Editors/: CConditionalEditor.h  CConfigurationEditor.h  CConstantEditor.h  CGeneratedTextFileEditor.h  CGroupEditor.h  CNameDescEditor.h  COperationEditor.h  CProcessEditor.h  CProjectEditor.h  CVariableEditor.h  ITreeItemEditor.h
include/ui/Models/: CBaseModel.h  CBaseModelMapped.h  CBaseTreeItemModel.h  CConditionalTreeModel.h  CConfigurationSummaryModel.h  CDocExporterTableModel.h  CFileOperationsModel.h  CInstanceColumn.h  CProcessArgsModel.h  CTreeBrowserModel.h  CVariableCell.h  CVariableTableModel.h
include/util/: CGuid.h  CScopedConsoleStyle.h  CTempFile.h  IIdentifiable.h  ITracked.h  Log.h  StartProcess.h  version.h
include/vfs/: CPersistentFileGenerator.h  CTempSymlinkGenerator.h  IFileGenerator.h  IProjectedFileSystemProvider.h
res/: EXTRA_INSTALL_COMMANDS.in  EXTRA_UNINSTALL_COMMANDS.in  README.cmake  resources.in.rc
res/icons/: .gitignore  exportIcons.cmake
res/mainIcon/: .gitignore  exportIcon.cmake
src/: main.cpp
src/core/: CConfiguration.cpp  CConfigurationGroup.cpp  CEnvironmentImport.cpp  CEnvironmentVariable.cpp  CEvaluationContext.cpp  CExecutionContext.cpp  CExecutionContextBase.cpp  CFileTextProvider.cpp  CGeneratedTextFile.cpp  CGroup.cpp  CInstance.cpp  CInstanceGroup.cpp  CNoChildren.cpp  CParentalMap.cpp  CProcessArgument.cpp  CProcessFireForget.cpp  CProcessWaitCompletion.cpp  CProject.cpp  CRunProcess.cpp  CStoredDescriptionItem.cpp  CStoredExpression.cpp  CStoredItemCollection.cpp  CStoredNameItem.cpp  CStoredTextProvider.cpp  CVariable.cpp  CVariableExpressionKey.cpp  EBuiltInVariables.cpp  IExpression.cpp  INotifyItemOperation.cpp  IProcessPolicy.cpp  IProjTreeItem.cpp
src/core/items/: CAssignable.cpp  CConfiguration.cpp  CConfigurationGroup.cpp  CConstant.cpp  CEnvironmentImport.cpp  CGroup.cpp  CInstance.cpp  CInstanceGroup.cpp  CProject.cpp
src/core/items/condition/: CConditional.cpp  CLogicalComparator.cpp  (+1 more)
src/docs/: CCommonMarkExporter.cpp  CDiagram.cpp  CHtmlExporter.cpp  CMarkCustomBlock.cpp  CMarkNodeWrapper.cpp  CMarkdownExporter.cpp  CStoredOutputFileName.cpp
src/ui/: CAcceleratorEntry.cpp  CGeneratedTextFileEditor.cpp  CGroupEditor.cpp  CMainApp.cpp  CMainWindow.cpp  CNameDescEditor.cpp  CProcessEditor.cpp  CProjectEditor.cpp  CTextStyler.cpp  CTreeBrowserModel.cpp  CTreeItemEditorManager.cpp  CVariableEditor.cpp  ITreeItemEditor.cpp  SDocExporterTypeInfo.cpp  STreeItemTypeInfo.cpp
src/ui/Editors/: CConditionalEditor.cpp  CConfigurationEditor.cpp  CConstantEditor.cpp  CGeneratedTextFileEditor.cpp  CGroupEditor.cpp  CNameDescEditor.cpp  COperationEditor.cpp  CProcessEditor.cpp  CProjectEditor.cpp  CVariableEditor.cpp  ITreeItemEditor.cpp
src/ui/Models/: CBaseModel.cpp  CBaseModelMapped.cpp  CBaseTreeItemModel.cpp  CConditionalTreeModel.cpp  CConfigurationSummaryModel.cpp  CDocExporterTableModel.cpp  CFileOperationsModel.cpp  CInstanceColumn.cpp  CProcessArgsModel.cpp  CTreeBrowserModel.cpp  CVariableCell.cpp  CVariableTableModel.cpp
src/util/: CGuid.cpp  CScopedConsoleStyle.cpp  CTempFile.cpp  IIdentifiable.cpp  Log.cpp  StartProcess.cpp  version.in.cpp
src/vfs/: CPersistentFileGenerator.cpp  CTempSymlinkGenerator.cpp  IProjectedFileSystemProvider.cpp
ui/: IConditionalEditor.fbp  IConfigurationEditor.fbp  IConstantEditor.fbp  IGroupEditor.fbp  IMainWindow.fbp  INameDescEditor.fbp  IOperationEditor.fbp  IProjectEditor.fbp  IRunProcessEditor.fbp  ITextFileEditor.fbp  IVariableEditor.fbp  wxFormBuilder.cmake
ui/wxExport/: .gitignore
(+22 files in other folders)
